samples/_failures_safe/1761324687_0cfd0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_623e928f.c: In function ‘main’:
./samples/SAFE/__tmp_623e928f.c:117:5: error: expected declaration or statement at end of input
  117 |     printf("Enter 'END' on a separate line to finish input\n");
      |     ^~~~~~
